Fixing alignment of img-caption quickly

--- a/src/styles/post.css
+++ b/src/styles/post.css
@@ -188,7 +188,7 @@
 
 .prose .img-caption {
   display: block;
-  text-align: center;
+  text-align: left;
   color: var(--text-secondary);
   font-size: var(--font-size-s);
   margin-bottom: 2em;
